se implemento el sistema de rutas; se modificaron los componentes de personas; se agrego una vista de error; falta mejorar esteticamente

--- a/first-app/src/app/app.component.html
+++ b/first-app/src/app/app.component.html
@@ -1,47 +1,1 @@
-<div class="content" role="main">
-    <div class="container">
-        <div class="row my-3">
-            <div class="col-5">
-                <h2>{{ title }}</h2>
-            
-                <label for="">Cambiar titulo:</label>
-                <input type="text" class="form-control" [(ngModel)]="title">
-                <!-- <input type="text" class="form-control" (input)="modifyTitle($event)"> -->
-            </div>
-            
-            <div class="col-5">
-                <button class="btn btn-primary" [disabled]="disabled" (click)="modifyTitle()">
-                    Tocar boton
-                </button>
-                <p>{{ message }}</p>
-            </div>
-        </div>
-
-        <hr>
-    </div>
-    
-    <div class="container">
-        <h3>Calculadora</h3>
-        <div class="row mb-3">
-            <form action="">
-                <div class="col-5 d-flex justify-space-between form-group">
-                    <input name="operandA" type="number" class="form-control" [(ngModel)]="operandA">
-                    <label>+</label>
-                    <input name="operandB" type="number" class="form-control" [(ngModel)]="operandB">
-                    <p>=</p>
-                    <p>{{ result }}</p>
-                </div>
-                <div class="col-3">
-                    <button type="submit" class="btn btn-primary" (click)="calculate()">Calcular</button>
-                </div>
-            </form>
-        </div>
-    </div>
-
-    <div class="container">
-        <div class="row">
-            <hr>
-            <app-people></app-people>
-        </div>
-    </div>
-</div>
+<router-outlet></router-outlet>
