--- a/first-app/src/app/components/people/people.component.html
+++ b/first-app/src/app/components/people/people.component.html
@@ -1,23 +1,27 @@
-<h3>Nueva persona:</h3>
-<div class="col">
-    <form action="" class="form-row">
-        <div class="form-group col-md-2">
-            <label for="firstname">Nombre</label>
-            <input type="text" name="firstname" id="firstname" class="form-control" [(ngModel)]="firstname">
-            <!-- <input type="text" name="firstname" id="firstname" class="form-control" #firstname> -->
+<div class="container mt-3">
+    <div class="row">
+        <div class="col">
+            <h2>Listado de personas:</h2>
+            <div class="mt-3" *ngFor="let person of people; let i = index">
+                <ul>
+                    <li>
+                        <a class="person-link" [routerLink]="['/people',i]">
+                            {{ person.firstname }} {{ person.lastname }}
+                        </a>
+                        <button class="btn btn-small btn-danger mx-2" (click)="deletePerson(i)">Eliminar</button>
+                    </li>
+                </ul>
+            </div>
+            
+            <button class="btn btn-primary mt-2" type="submit" (click)="addPerson()">Agregar persona</button>
         </div>
-        <div class="form-group col-md-2">
-            <label for="lastname">Apellido</label>
-            <input type="text" name="lastname" id="lastname" class="form-control" [(ngModel)]="lastname">
-            <!-- <input type="text" name="lastname" id="lastname" class="form-control" #lastname> -->
+    </div>
+    
+    <div class="row">
+        <div class="col">
+            <div class="col">
+                <router-outlet></router-outlet>
+            </div>
         </div>
-        <div class="form-group">
-            <button type="submit" class="btn btn-primary" (click)="addPerson()">Guardar</button>
-            <!-- <button type="submit" class="btn btn-primary" (click)="addPerson(firstname, lastname)">Guardar</button> -->
-        </div>
-    </form>
+    </div>
 </div>
-
-<app-person *ngFor="let person of people; let i = index" [person]="person" [index]="i">
-<!-- (sendNewPerson)="addNewPerson($event)" -->
-</app-person>
