--- a/first-app/src/app/app.component.html
+++ b/first-app/src/app/app.component.html
@@ -1,1 +1,22 @@
+<header>
+    <nav class="navbar navbar-expand-lg bg-dark">
+        <div class="container-fluid">
+            <a class="navbar-brand" routerLink="/">Home</a>
+            <div>
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-item" routerLink="/people">Personas</a>
+                    </li>
+                    <li *ngIf="!isLogged()" class="nav-item">
+                        <a class="nav-item" routerLink="/login">Ingresar</a>
+                    </li>
+                    <li *ngIf="isLogged()" class="nav-item">
+                        <a class="nav-item" routerLink="/login" (click)="logout()">Cerrar sesion</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+</header>
+
 <router-outlet></router-outlet>
