--- a/clients/src/app/app.component.html
+++ b/clients/src/app/app.component.html
@@ -1,3 +1,36 @@
-<h1>Hola mundo!</h1>
+<nav class="navbar navbar-expand-sm navbar-dark bg-dark px-3">
+    <div class="container-fluid">
+        <a routerLink="/" class="navbar-brand">Logo</a>
+        <button class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <div class="collapse navbar-collapse" id="navbarCollapse">
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a routerLink="/clients" class="nav-link">Clientes</a>
+                </li>
+                <li class="nav-item">
+                    <a routerLink="/login" class="nav-link">Ingresar</a>
+                </li>
+                <li class="nav-item">
+                    <a routerLink="/register" class="nav-link">Registrarse</a>
+                </li> 
+            </ul>
+        </div>
+    </div>
+</nav>
 
 <router-outlet></router-outlet>
+
+<footer class="bg-warning text-white mt-5">
+    <div class="container">
+        <div class="row">
+            <div class="col">
+                <p class="lead text-center p-1">
+                    Copyright &copy; 2022
+                </p>
+            </div>
+        </div>
+    </div>
+</footer>
