--- a/clients/src/app/app.component.html
+++ b/clients/src/app/app.component.html
@@ -10,12 +10,24 @@
                 <li class="nav-item">
                     <a routerLink="/clients" class="nav-link">Clientes</a>
                 </li>
+            </ul>
+            
+            <ul class="navbar-nav">
                 <li class="nav-item">
                     <a routerLink="/login" class="nav-link">Ingresar</a>
                 </li>
                 <li class="nav-item">
                     <a routerLink="/register" class="nav-link">Registrarse</a>
-                </li> 
+                </li>
+                <li class="nav-item dropdown">
+                    <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">User</a>
+                    <div class="dropdown-menu dropdown-link">
+                        <a routerLink="/login" class="dropdown-item">
+                            <i class="fas fa-user"></i>
+                            Cerrar sesion
+                        </a>
+                    </div>
+                </li>
             </ul>
         </div>
     </div>
