--- a/clients/src/app/components/dashboard/dashboard.component.html
+++ b/clients/src/app/components/dashboard/dashboard.component.html
@@ -9,3 +9,23 @@
         </div>
     </div>
 </header>
+
+<main>
+    <div class="container">
+        <div class="row">
+            <div class="col-md-9">
+                <div class="card mt-5">
+                    <div class="card-header">
+                        <h3>Bienvenido!</h3>
+                    </div>
+                    <div class="card-body">
+                        <p>Esta es una pagina hecha con fines de aprendizaje. Es el proyecto final de un curso de Angular.</p>
+                        <p>Se basa en una administracion simple de clientes en la que se puede dar de ALTA, BAJA, MODIFICACION y ELIMINACION de los mismos.</p>
+                        <p>La base de datos esta hecha en Firestore Cloud.</p>
+                        <p>Tambien cuenta con un login y registro; Los datos de los clientes solo pueden ser accedidos por usuarios logueados.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</main>
