--- a/clients/src/app/app.component.html
+++ b/clients/src/app/app.component.html
@@ -35,8 +35,8 @@
 
 <router-outlet></router-outlet>
 
-<footer class="bg-warning text-white mt-5">
-    <div class="container">
+<footer class="bg-warning text-white mt-5 footer">
+    <div class="container-fluid">
         <div class="row">
             <div class="col">
                 <p class="lead text-center p-1">
