--- a/clients/src/app/components/error-page/error-page.component.html
+++ b/clients/src/app/components/error-page/error-page.component.html
@@ -1,1 +1,14 @@
-<p>error-page works!</p>
+<div class="container">
+    <div class="row">
+        <div class="col-md-9">
+            <div class="card mt-5">
+                <div class="card-header">
+                    <h2>404 No encontrado</h2>
+                </div>
+                <div class="card-body">
+                    <p>La pagina que ingreso no fue encontrada.</p>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
