--- a/clients/src/app/components/login/login.component.html
+++ b/clients/src/app/components/login/login.component.html
@@ -51,6 +51,9 @@
                         </form>
                     </div>
                 </div>
+                <div class="mt-3">
+                    <a routerLink="/register">Aun no tengo una cuenta</a>
+                </div>
             </div>
         </div>
     </div>
