--- a/clients/src/app/components/register/register.component.html
+++ b/clients/src/app/components/register/register.component.html
@@ -1,1 +1,60 @@
-<p>register works!</p>
+<header class="py-2 bg-info text-white">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-6">
+                <h3>
+                    <i class="fas fa-user"></i>
+                    Registrarse
+                </h3>
+            </div>
+        </div>
+    </div>
+</header>
+
+<section class="py-4 mb-4 bg-light">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-6 mx-auto">
+                <div class="card">
+                    <div class="card-header">Crear una cuenta</div>
+                    <div class="card-body">
+                        <form #loginForm="ngForm" (ngSubmit)="register(loginForm)">
+                            <div class="form-group">
+                                <label for="email">Email</label>
+                                <input type="email" class="form-control" name="email"
+                                    #email="ngModel" [(ngModel)]="user.email"
+                                    [ngClass]="{'is-invalid': email.errors && email.touched}"
+                                    required pattern="^\w+([\.-]?\w+)*@\w+([\.-]?\w+)*(\.\w{2,3})+$"
+                                >
+                                <div [hidden]="!email.errors?.pattern" class="invalid-feedback">
+                                    El correo no es valido
+                                </div>
+                                <div [hidden]="!email.errors?.required" class="invalid-feedback">
+                                    El correo es obligatorio
+                                </div>
+                            </div>
+                            <div class="form-group mt-3">
+                                <label for="password">Contraseña</label>
+                                <input type="password" name="password" class="form-control"
+                                    [(ngModel)]="user.password" #password="ngModel"
+                                    [ngClass]="{'is-invalid': password.errors && password.touched}"
+                                    required minlength="8"
+                                >
+                                <div [hidden]="!password.errors?.minlength" class="invalid-feedback">
+                                    La contraseña debe tener al menos 8 caracteres
+                                </div>
+                                <div [hidden]="!password.errors?.required" class="invalid-feedback">
+                                    La contraseña es obligatoria
+                                </div>
+                            </div>
+                            <button type="submit" class="btn btn-success mt-3 align-right">Registrarse</button>
+                        </form>
+                    </div>
+                </div>
+                <div class="mt-3">
+                    <a routerLink="/login">Ya tengo una cuenta</a>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
